# datasetvision

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/datasetvision/: __init__.py  anomaly.py  class_analysis.py  cli.py  config.py  drift.py  duplicates.py  fingerprint.py  hashing.py  html_report.py  intelligence.py  label_noise.py  logging_config.py  policy.py  reporting.py  scanner.py  stats.py  utils.py
tests/: test_duplicates.py  test_scanner.py  test_stats.py
