[project]
name = "datasetvision"
version = "0.2.0"
description = "Research-grade dataset governance CLI for computer vision"
authors = [{ name="Nibir Biswas", email="nibir.github@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[project.scripts]
datasetvision = "datasetvision.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
