[project]
name = "datasetvision"
version = "0.3.0"
description = "Industry-grade dataset governance CLI for computer vision"
authors = [{ name="Nibir Biswas", email="nibir.github@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "PyYAML>=6.0"
]
keywords = ["computer-vision", "data-governance", "dataset-drift", "anomaly-detection", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/nibir-ai/datasetvision"
Repository = "https://github.com/nibir-ai/datasetvision.git"
Tracker = "https://github.com/nibir-ai/datasetvision/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[project.scripts]
datasetvision = "datasetvision.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
